--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "tree-sitter-javascript": "git://github.com/tree-sitter/tree-sitter-javascript.git#master"
   },
   "scripts": {
-    "preinstall": "git submodule update -i -r",
-    "install": "prebuild-install || node-gyp rebuild",
+    "install": "git submodule update -i -r && prebuild-install || node-gyp rebuild",
     "prebuild": "prebuild -r electron -t 3.0.0 -t 4.0.0 -t 4.0.4 -t 5.0.0 --strip && prebuild -t 10.12.0 -t 12.13.0 --strip",
     "prebuild:upload": "prebuild --upload-all",
     "test": "mocha"
